--- a/css/list.css
+++ b/css/list.css
@@ -11883,4 +11883,54 @@ body {
   content: counter(row-count);
 }
 
+.row-control {
+  position: relative;
+}
+
+.row-delete {
+  position: absolute;
+  left: 100%;
+  top: 5px;
+  opacity: 0;
+  transform: translateX(10px);
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.recordRow:hover .row-delete {
+  opacity: 1;
+  transform: translateX(0px);
+  pointer-events: all;
+}
+
+.row-quantity-decrement, .row-quantity-increment {
+  background-color: #c1b1b1;
+  color: #333333;
+  opacity: 0;
+  transform: translateX(0px);
+  transition: 0.5s;
+  pointer-events: none;
+  display: inline-block;
+}
+
+.row-quantity {
+  display: inline-block;
+  width: 10px;
+}
+
+.row-quantity-increment {
+  transform: translateX(10px);
+}
+
+.row-quantity-decrement {
+  transform: translateX(-10px);
+}
+
+.recordRow:hover .row-quantity-increment,
+.recordRow:hover .row-quantity-decrement {
+  opacity: 1;
+  transform: translateX(0px);
+  pointer-events: all;
+}
+
 /*# sourceMappingURL=list.css.map */
